chore(Newsroom): fix spacing and data-cy attributes

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_newsArticle.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_newsArticle.scss
@@ -256,6 +256,14 @@
             text-align: left;
         }
     }
+
+    &__card {
+        &:last-child {
+            @media #{$mobile} {
+                margin-bottom: 1em;
+            }
+        }
+    }
 }
 
 #category-filter, #news-archive, #displayRefineBy > li {
